website: Update 13.5R Release Notes
- Mention that this might be the last release in 13-STABLE branch
- Add Security Advisories

Approved by:	re (implicit)

--- a/website/content/en/releases/13.5R/relnotes.adoc
+++ b/website/content/en/releases/13.5R/relnotes.adoc
@@ -5,8 +5,8 @@ sidenav: download
 
 :releaseCurrent: 13.5-RELEASE
 :releaseBranch: 13-STABLE
-:releasePrev: X.Y-RELEASE
-:releaseNext: X.Y-RELEASE
+:releasePrev: 13.4-RELEASE
+:releaseNext: 13.5-RELEASE
 :releaseType: "release"
 
 include::shared/en/urls.adoc[]
@@ -34,7 +34,8 @@ It also provides some notes on upgrading from previous versions of FreeBSD.
 The {releaseType} distribution to which these release notes apply represents the latest point along the {releaseBranch} development branch since {releaseBranch} was created.
 Information regarding pre-built, binary {releaseType} distributions along this branch can be found at https://www.FreeBSD.org/releases/[].
 
-The {releaseType} distribution to which these release notes apply represents a point along the {releaseBranch} development branch between {releasePrev} and the future {releaseNext}.
+The {releaseType} distribution to which these release notes apply represents a point along the {releaseBranch} development branch since {releasePrev}.
+The {releaseNext} is expected to be the final release from the {releaseBranch} branch.
 Information regarding pre-built, binary {releaseType} distributions along this branch can be found at https://www.FreeBSD.org/releases/[].
 
 This distribution of FreeBSD {releaseCurrent} is a {releaseType} distribution.
@@ -83,10 +84,41 @@ This section lists the various Security Advisories and Errata Notices since {rel
 | Date
 | Topic
 
-|No advisories.
-|
-|
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-24:15.bhyve.asc[FreeBSD-SA-24:15.bhyve]
+|19 September 2024
+|man:bhyve[8] out-of-bounds read access via XHCI emulation
 
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-24:16.libnv.asc[FreeBSD-SA-24:16.libnv]
+|19 September 2024
+|Integer overflow in libnv
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-24:17.bhyve.asc[FreeBSD-SA-24:17.bhyve]
+|29 October 2024
+|Multiple issues in the bhyve hypervisor
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-24:18.ctl.asc[FreeBSD-SA-24:18.ctl]
+|29 October 2024
+|Unbounded allocation in man:ctl[4] CAM Target Layer
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-24:19.fetch.asc[FreeBSD-SA-24:19.fetch]
+|29 October 2024
+|Certificate revocation list man:fetch[1] option fails
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:01.openssh.asc[FreeBSD-SA-25:01.openssh]
+|29 January 2025
+|OpenSSH Keystroke Obfuscation Bypass
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:02.fs.asc[FreeBSD-SA-25:02.fs]
+|29 January 2025
+|Buffer overflow in some filesystems via NFS
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:03.etcupdate.asc[FreeBSD-SA-25:03.etcupdate]
+|29 January 2025
+|Unprivileged access to system files
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:04.ktrace.asc[FreeBSD-SA-25:04.ktrace]
+|29 January 2025
+|Uninitialized kernel memory disclosure via man:ktrace[2]
 |===
 
 [[errata]]
