website: Update 13.5R Release Notes
- Add Erratas

Approved by:	re (implicit)

--- a/website/content/en/releases/13.5R/relnotes.adoc
+++ b/website/content/en/releases/13.5R/relnotes.adoc
@@ -131,10 +131,25 @@ This section lists the various Security Advisories and Errata Notices since {rel
 | Date
 | Topic
 
-|No notices.
-|
-|
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-24:16.pf.asc[FreeBSD-EN-24:16.pf]
+|19 September 2024
+|Incorrect ICMPv6 state handling in pf
 
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-24:17.pam_xdg.asc[FreeBSD-EN-24:17.pam_xdg]
+|29 October 2024
+|XDG runtime directory's file descriptor leak at login
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:01.rpc.asc[FreeBSD-EN-25:01.rpc]
+|29 January 2025
+|NULL pointer dereference in the NFSv4 client
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:02.audit.asc[FreeBSD-EN-25:02.audit]
+|29 January 2025
+|System call auditing disabled by DTrace
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:03.tzdata.asc[FreeBSD-EN-25:03.tzdata]
+|29 January 2025
+|Timezone database information update
 
 |===
 
