[phb][Uses]: Add missing Uses=ocaml

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -1725,6 +1725,59 @@ Possible arguments: (none)
 
 Add objective C dependencies (compiler, runtime library) if the base system does not support it.
 
+[[uses-ocaml]]
+== `ocaml`
+
+Possible arguments: (none), `build`,`camlp4`,`dune`,`findlib`,`findplist`,`ldconfig`,`run`,`tk`,`tkbuild`,`tkrun`,`wash`
+
+Provide support for OCaml.
+
+If no arguments are provided, it defaults to `build`, `run`.
+
+If the `build` argument is provided then package:lang/ocamlc[] is added to
+`BUILD_DEPENDS`, `EXTRACT` and `PATCH_DEPENDS`.
+
+If the `camlp4` argument is provided then package:devel/ocamlp4[] is used to build.
+
+If the `dune` argument is provided then package:devel/ocaml-dune[] is used as build system.
+
+If the `findlib` argument is provided then `ocamlfind` will be used to install packages. Package directories will be automatically deleted.
+
+If the `findplist` argument is provided then contents of the `findlib` target directories will be added automatically.
+
+If the `ldconfig` argument is provided then OCaml's [.filename]#ld.conf# file
+will be automatically processed. When `dune` is used Dune may install stublibs
+in site-lib package directory(ies) or in a single directory below `DUNE_LIBDIR` site-lib directory.
+Set if your port installs shared libraries into ocaml
+
+If the `run` argument is provided add ocamlc to `RUN_DEPENDS`.
+
+If the `tk` argument is provided then a build and run dependency on
+package:x11-toolkits/ocaml-labltk[] is added to the port. Implies `tkbuild` and
+`tkrun`.
+
+If the `tkbuild` argument is provided then package:x11-toolkits/ocaml-labltk[]
+is added to `BUILD_DEPENDS`, `EXTRACT` and `PATCH_DEPENDS`.
+
+If the `tkrun` argument is provided then package:x11-toolkits/ocaml-labltk[] is
+added to `RUN_DEPENDS`.
+
+If the `wash` argument is provided Ocaml's shared directories will be purged on
+uninstall. Useful when installing to non-standard `PREFIX`.
+
+The following variables can be set by the port:
+
+`OCAML_PKGDIRS`::
+Directories under site-lib to be processed if the `findlib` argument is specified. Default: `${PORTNAME}`
+
+`OCAML_LDLIBS`::
+Directories under `PREFIX` to be automatically added/removed from [.filename]#ld.conf#.
+Default: `${OCAML_SITELIBDIR}/${PORTNAME}`
+
+`OCAML_PACKAGES`::
+List of packages to build and install. Default to `${PORTNAME}`
+
+
 [[uses-octave]]
 == `octave`
 
