Handbook-Desktop: Upgrade KDE Plasma packages to version 6

--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -114,7 +114,7 @@ To install the KDE Plasma meta package with KDE Frameworks, Plasma Desktop and A
 
 [source,shell]
 ....
-# pkg install kde5
+# pkg install kde
 ....
 
 [[kde-minimal-install]]
@@ -124,7 +124,7 @@ To install a minimal KDE Plasma execute:
 
 [source,shell]
 ....
-# pkg install plasma5-plasma
+# pkg install plasma6-plasma
 ....
 
 [TIP]
