[phb][Uses]: Add missing Uses=waf

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -2618,6 +2618,30 @@ Possible arguments: `4` (default), `6`, `7`
 Handle dependencies on Varnish Cache.
 Adds a dependency on package:www/varnish*[].
 
+[[uses-waf]]
+== `waf`
+
+Possible arguments: (none)
+
+Provide support for ports using the `waf` build system.
+
+It implies `USES=python:build`.
+
+The following variables are exported to be used by the port:
+
+`WAF_CMD`::
+Location of the `waf` script. Set this if the `waf` script is not in
+[.filename]#WRKSRC/waf#.
+
+`CONFIGURE_TARGET`::
+`Configure` target. Default `configure`.
+
+`ALL_TARGET`::
+`All` target. Default `build`.
+
+`INSTALL_TARGET`::
+`Install` target. Default `install`.
+
 [[uses-webplugin]]
 == `webplugin`
 
