[phb][Uses]: Add missing Uses=trigger
Differential Revision: https://reviews.freebsd.org/D49074

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -2853,6 +2853,22 @@ Same as arguments for `tcl`
 Small wrapper when using both Tcl and Tk.
 The same variables are returned as when using Tcl.
 
+[[uses-trigger]]
+== `trigger`
+
+Possible arguments: (none)
+
+Provide support for ports requiring triggers to be executed by man:pkg[8].
+Triggers are executed at the end of a transaction if the conditions are met.
+
+The following variable can be set by ports:
+
+`TRIGGERS`::
+List of triggers to package. Defaults to `${PORTNAME}`.
+
+Triggers are specified in UCL format and are usually placed in the
+[.filename]#files/# directory of the port.
+
 [[uses-uidfix]]
 == `uidfix`
 
