website: Update 13.5R Release Notes
- Add mandatory sections which were marked with Relnotes=yes

Approved by:	re (implicit)

--- a/website/content/en/releases/13.5R/relnotes.adoc
+++ b/website/content/en/releases/13.5R/relnotes.adoc
@@ -192,6 +192,9 @@ This section covers changes and additions to devices and device drivers since {r
 [[drivers-removals]]
 === Deprecated and Removed Drivers
 
+man:agp[4] has been planned for removal in FreeBSD 15.0, and the man page now states that it is deprecated.
+gitref:8375d2b9c653[repository=src].
+
 [[storage]]
 == Storage
 
@@ -199,6 +202,14 @@ This section covers changes and additions to file systems and other storage subs
 
 [[storage-general]]
 === General Storage
+
+Allow to pass {NGROUPS_MAX} + 1 groups in man:mountd[8].
+gitref:927d7d57793a[repository=src].
+NGROUPS_MAX is just the minimum maximum of the number of allowed supplementary groups.
+The actual runtime value may be greater.
+Allow more groups to be specified accordingly.
+man:nmount[2] has been changed similarly.
+(Sponsored by The FreeBSD Foundation)
 
 [[boot]]
 == Boot Loader Changes
@@ -216,6 +227,27 @@ This section describes changes that affect networking in FreeBSD.
 [[network-general]]
 === General Network
 
+Convert PF_DEFAULT_TO_DROP into a vnet loader tunable `net.pf.default_to_drop`.
+gitref:cb162f659578[repository=src].
+gitref:7f7ef494f11d[repository=src] introduced a compile time option PF_DEFAULT_TO_DROP to make the man:pf[4] default rule to drop.
+While this change exposes a vnet loader tunable `net.pf.default_to_drop` so that users can change the default rule without re-compiling the man:pf[4] module.
+This change is similar to that for IPFW gitref:5f17ebf94db5[repository=src].
+
+Add AIM to man:igc[4] driver.
+gitref:eaa616f02193[repository=src].
+igc is derived from igb and has never had an AIM implementation. The same algorithm from e1000 is appropriate here.
+The AIM algorithm was re-introduced from the older igb or out of tree driver, and then modernized with permission to use Intel code from other drivers.
+(Sponsored by	Rubicon Communications, LLC/Netgate and BBOX.io)
+
+Re-add AIM to e1000 driver.
+gitref:a527aa7a7f62[repository=src].
+(Sponsored by	Rubicon Communications, LLC/Netgate and BBOX.io)
+
+Old itr sysctl handler has been removed from the e1000 driver.
+gitref:a42c3e61504b[repository=src].
+With the new AIM code, it is expected most users will not need to manually tune this.
+(Sponsored by	BBOX.io)
+
 [[hardware]]
 == Hardware Support
 
@@ -225,6 +257,31 @@ Please see link:https://www.freebsd.org/releases/13.5R/hardware[the list of hard
 
 [[hardware-virtualization]]
 === Virtualization Support
+
+Teach man:sysctl[8] to attach and run itself in a jail.
+gitref:5b0a5d8c1ea3[repository=src].
+This allows the parent jail to retrieve or set kernel state when child does not have man:sysctl[8] installed (for example light weighted OCI containers or slim jails).
+This is especially useful when manipulating jail prison or vnet sysctls.
+For example, `sysctl -j foo -Ja` or `sysctl -j foo net.fibs=2`.
+
+Teach man:ip6addrctl[8] to attach and run itself in a jail.
+gitref:fa9926a62ae3[repository=src].
+This will make it easier to manage address selection policies of vnet jails, especially for those light weighted OCI containers or slim jails.
+
+Enable vnet man:sysctl[9] variables to be loader tunable.
+gitref:d2a999c2e0a0[repository=src].
+Completes phase two of gitref:3da1cf1e88f8[repository=src].
+The meaning of the flag CTLFLAG_TUN is extended to automatically check if there is a kernel environment variable which shall initialize the sysctl during early boot.
+In memoriam of Hans Petter Selasky.
+
+Add flags to filter jail prison and vnet variables via man:sysctl[8].
+gitref:09cbd68e4e47[repository=src].
+So users do not have to contact the source code to tell whether a variable is a jail prison / vnet one or not.
+
+Define a common `mac` node for jail parameters of MAC.
+gitref:ae2383c0dd16[repository=src].
+To be used by MAC/do.
+(Sponsored by The FreeBSD Foundation)
 
 [[documentation]]
 == Documentation
