website: Update 13.5R Release Notes
- Add latest Security Advisory for SSH into the notes

Approved by:	re (implicit)

--- a/website/content/en/releases/13.5R/relnotes.adoc
+++ b/website/content/en/releases/13.5R/relnotes.adoc
@@ -119,6 +119,10 @@ This section lists the various Security Advisories and Errata Notices since {rel
 |https://www.freebsd.org/security/advisories/FreeBSD-SA-25:04.ktrace.asc[FreeBSD-SA-25:04.ktrace]
 |29 January 2025
 |Uninitialized kernel memory disclosure via man:ktrace[2]
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:05.openssh.asc[FreeBSD-SA-25:05.openssh]
+|21 February 2025
+|Multiple vulnerabilities in OpenSSH
 |===
 
 [[errata]]
