website: Update 13.5R Release Notes
- Update some more entries which were not marked with Relnotes but seemed
  interesting to be included in the Release Notes

Approved by:	re (implicit)
Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/releases/13.5R/relnotes.adoc
+++ b/website/content/en/releases/13.5R/relnotes.adoc
@@ -171,8 +171,74 @@ This section covers changes and additions to userland applications, contributed 
 [[userland-contrib]]
 === Contributed Software
 
+`libpcap` has been consecutively updated to 1.10.3, 1.10.4 and 1.10.5.
+gitref:7aedea868535[repository=src], gitref:e6efc827e47a[repository=src] and gitref:68ddf72800f8[repository=src].
+(Sponsored by	The FreeBSD Foundation)
+
+`tpcdump` has been consecutively updated to 4.99.4 and 4.99.5.
+gitref:e5258a079df3[repository=src] and gitref:094f44ea0358[repository=src].
+(Sponsored by	The FreeBSD Foundation).
+
+`tzdata` has been consecutively updated to 2024b and 2025a.
+gitref:59ffae6c0c7a[repository=src] and gitref:2d6dcb4f97f8[repository=src].
+
+`expat` has been consecutively updated to 2.6.3 and 2.6.4.
+gitref:bab279022ba2[repository=src] and gitref:3d46113d2196[repository=src].
+
+`less` has been updated to v668.
+gitref:eed6d080a74f[repository=src].
+
+`file` has been updated consecutively to 5.45 and 5.46.
+gitref:90222d7fa4bb[repository=src] and gitref:dcb4ac96fcf6[repository=src].
+
+`xz` has been updated consecutively to 5.6.2 and 5.6.3.
+gitref:45230e7f9298[repository=src] and gitref:aa2f56a6ecd6[repository=src].
+
+Some functionalities of `libusb` have been merged from the 1.0.16 version.
+gitref:02ef8e4061ab[repository=src].
+(Sponsored by	The FreeBSD Foundation)
+
+`tzcode` has been updated to 2024b.
+gitref:036ce2460cbc[repository=src].
+(Sponsored by	Klara, Inc.)
+
+`ena-com` from man:ena[4] has been updated to FreeBSD v2.8.0.
+gitref:4691f19ae80e[repository=src].
+
+With multiple intermediary commits and version updates llvm-project has been updated to release/19.x llvmorg-19.1.7-0-gcd708029e0b2.
+gitref:2611bae42b7d[repository=src].
+This updates llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp.
+
+man:libarchive[3] has been updated to 3.7.7.
+gitref:6c7993ffba96[repository=src].
+
+man:unbound[8] has been consecutively updated to 1.21.0, 1.21.1 and 1.22.0.
+gitref:7217d74d1085[repository=src], gitref:d10c9c15a3a4[repository=src] and gitref:741bb8476204[repository=src].
+
+wpa has been updated to 2.11.
+gitref:87b2a3073aaf[repository=src].
+
+`bc` has been consecutively updated to 7.0.0 and 7.0.2.
+gitref:1d669b3d15bc[repository=src] and gitref:bb18c65a9177[repository=src].
+
+`sqlite3` has been updated to 3.46.1.
+gitref:bee9d305ee57[repository=src].
+
+OpenSSH has been consecutively updated to 9.8p1, 9.9p1 and 9.9p2.
+gitref:b74bb7f01193[repository=src], gitref:cb8e164fbb15[repository=src] and gitref:31dcdee20afc[repository=src].
+(Sponsored by	The FreeBSD Foundation)
+
 [[userland-deprecated-programs]]
 === Deprecated Applications
+
+Update deprecation warning to note that man:gvinum[8] is removed in 15.0.
+gitref:8126ed28bda6[repository=src].
+
+man:shar[1] has been deprecated and deprecation notice has been added.
+gitref:0d946859c994[repository=src].
+The man:shar[1] program is simple, but the fundamental idea of a sh archive is
+risky at best and one that probably should not be promoted as prominently as a program in `$PATH` and a manpage.
+The same functionality can easily be found in man:tar[1] instead.
 
 [[userland-libraries]]
 === Runtime Libraries and API
@@ -192,6 +258,16 @@ This section covers changes and additions to devices and device drivers since {r
 
 [[drivers-device]]
 === Device Drivers
+
+Purism coreboot keyboards support was added.
+gitref:dfdcb418d7b8[repository=src].
+
+Support of Realtek 8156/8156B was moved from man:dce[4] to man:ure[4].
+gitref:1b0af7617e6c[repository=src].
+(Sponsored by	The FreeBSD Foundation)
+
+Support for Brainboxes USB-to-Serial adapters were added.
+gitref:c3a377dbbb87[repository=src].
 
 [[drivers-removals]]
 === Deprecated and Removed Drivers
@@ -214,6 +290,18 @@ The actual runtime value may be greater.
 Allow more groups to be specified accordingly.
 man:nmount[2] has been changed similarly.
 (Sponsored by The FreeBSD Foundation)
+
+Defer the January 19, 2038 date limit in UFS1 filesystems to February 7, 2106.
+gitref:dfe803fdbc54[repository=src].
+
+Add microsecond precision for disk latency for man:gstat[8].
+gitref:d81b0f5e43f0[repository=src].
+(Sponsored by	Postgres Professional)
+
+Fix cd9660 duplicate directory names.
+gitref:79778b7aafc8[repository=src].
+This issue was at first introduced in FreeBSD 14.2-RELEASE which caused it creating cd9660 images with duplicate short (level 2) names in the installer images.
+(Sponsored by	The FreeBSD Foundation)
 
 [[boot]]
 == Boot Loader Changes
@@ -239,7 +327,7 @@ This change is similar to that for IPFW gitref:5f17ebf94db5[repository=src].
 
 Add AIM to man:igc[4] driver.
 gitref:eaa616f02193[repository=src].
-igc is derived from igb and has never had an AIM implementation. The same algorithm from e1000 is appropriate here.
+man:igc[4] is derived from man:igb[4] and has never had an AIM implementation. The same algorithm from e1000 is appropriate here.
 The AIM algorithm was re-introduced from the older igb or out of tree driver, and then modernized with permission to use Intel code from other drivers.
 (Sponsored by	Rubicon Communications, LLC/Netgate and BBOX.io)
 
@@ -251,6 +339,32 @@ Old itr sysctl handler has been removed from the e1000 driver.
 gitref:a42c3e61504b[repository=src].
 With the new AIM code, it is expected most users will not need to manually tune this.
 (Sponsored by	BBOX.io)
+
+Improve SFP support man:igb[4] driver.
+gitref:cf6a8711e437[repository=src].
+(Sponsored by	Nozomi Networks and BBOX.io)
+
+man:igb[4] driver version has been updated to 2.5.28-fbsd.
+gitref:a446e9481531[repository=src].
+
+`if_bypass` from man:ixgbe[4] has been updated to ix-3.3.38.
+gitref:5121d1b91209[repository=src].
+
+`if_ix` from man:ixgbe[4] has been updated with ix-3.3.38 changes.
+gitref:78d9eb6de856[repository=src].
+
+`ixgbe_mbx` from man:ixgbe[4] has been updated with ix-3.3.38 changes.
+gitref:fa00169e26ff[repository=src].
+
+`ixgbe_phy` from man:ixgbe[4] has been updated with ix-3.3.38 changes.
+gitref:b1dadbcebdfd[repository=src].
+
+`if_sriov` from man:ixgbe[4] has been updated with ix-3.3.38 changes.
+gitref:deea1953820e[repository=src].
+
+man:ena[4] driver version has been updated to 2.8.0.
+gitref:2e7ba5d93e2d[repository=src].
+(Sponsored by Amazon, Inc.)
 
 [[hardware]]
 == Hardware Support
@@ -287,6 +401,14 @@ gitref:ae2383c0dd16[repository=src].
 To be used by MAC/do.
 (Sponsored by The FreeBSD Foundation)
 
+`ORACLE VMSIZE` was bumped to accommodate growth.
+gitref:75cd2f886164[repository=src].
+
+OCI was renamed to ORACLE in releng tooling.
+gitref:aad6a5f96b78[repository=src].
+This allows future releng tooling to use OCI for the industry standard Open Container Initiative tooling, reducing potential for confusion Oracle Cloud Infrastructure.
+(Sponsored by	SkunkWerks, GmbH)
+
 [[documentation]]
 == Documentation
 
@@ -295,6 +417,12 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 [[man-pages]]
 === Man Pages
 
+Refer to man:graid[8] and zfs[8] instead of gvinum[8] in man:ccdconfig[8].
+gitref:9e3c356f11a9[repository=src].
+
+man:ixgbe[4] has been renamed to man:ix[4].
+gitref:c07626eaa21a[repository=src].
+
 [[ports]]
 == Ports Collection and Package Infrastructure
 
@@ -302,6 +430,22 @@ This section covers changes to the FreeBSD Ports Collection, package infrastruct
 
 [[ports-packages]]
 === Packaging Changes
+
+The KDE desktop environment has been removed from the installer images due to compatibility issues with OpenSSL 1.1.1 and upcoming package breakages.
+
+[[installer]]
+=== Installation and Upgrading
+
+An option was added to edit the ZFS pool creation options in bsdinstall zfsboot.
+gitref:6258b5bf0670[repository=src].
+This allows the default options (`-O compress=lz4 -O atime=off`) to be overridden, before the ZFS boot pool is created.
+For example, to set the compression algorithm to something different.
+
+Chase location of pkg repo databases.
+gitref:ef6b3c58883d[repository=src].
+pkg used to store copies of upstream repository databases in `/var/db/pkg/repo-\*.sqlite`.
+About a year ago this was moved to `/var/db/pkg/repos/*/`, resulting in FreeBSD cloud images no longer having those databases removed.
+(Sponsored by	Amazon)
 
 [[future-releases]]
 == General Notes Regarding Future FreeBSD Releases
