--- a/website/content/en/releases/13.5R/relnotes.adoc
+++ b/website/content/en/releases/13.5R/relnotes.adoc
@@ -229,7 +229,7 @@ gitref:b74bb7f01193[repository=src], gitref:cb8e164fbb15[repository=src] and git
 (Sponsored by	The FreeBSD Foundation)
 
 [[userland-deprecated-programs]]
-=== Deprecated Applications
+=== Deprecated Applications and Features
 
 Update deprecation warning to note that man:gvinum[8] is removed in 15.0.
 gitref:8126ed28bda6[repository=src].
@@ -239,6 +239,9 @@ gitref:0d946859c994[repository=src].
 The man:shar[1] program is simple, but the fundamental idea of a sh archive is
 risky at best and one that probably should not be promoted as prominently as a program in `$PATH` and a manpage.
 The same functionality can easily be found in man:tar[1] instead.
+
+While OpenSSH plans to remove support for the DSA signature algorithm in early 2025, FreeBSD 13.5-RELEASE and the stable/13 branch are not expected to receive upstream vendor code updates.
+However, potential security issues in imported components may necessitate the removal of DSA signature support during the branch's lifetime.
 
 [[userland-libraries]]
 === Runtime Libraries and API
@@ -449,3 +452,27 @@ About a year ago this was moved to `/var/db/pkg/repos/*/`, resulting in FreeBSD 
 
 [[future-releases]]
 == General Notes Regarding Future FreeBSD Releases
+FreeBSD 15.0 is not expected to include support for 32-bit platforms other than armv7.
+The armv6, i386, and powerpc platforms are deprecated and will be removed.
+64-bit systems will still be able to run older 32-bit binaries.
+
+The FreeBSD Project expects to support armv7 as a Tier 2 architecture in FreeBSD 15.0 and stable/15.
+However, the Project also anticipates that armv7 may be removed in FreeBSD 16.0.
+The Project will provide an update on the status of armv7 for both 15.x and 16.x at the time of 15.0 release.
+
+Support for executing 32-bit binaries on 64-bit platforms via the `COMPAT_FREEBSD32` option will continue for at least the stable/15 and stable/16 branches.
+Support for compiling individual 32-bit applications via `cc -m32` will also continue for at least the stable/15 branch, which includes suitable headers in [.filename]#/usr/include# and libraries in [.filename]#/usr/lib32#.
+
+Ports will not include support for deprecated 32-bit platforms for FreeBSD 15.0 and later releases.
+These future releases will not include binary packages or support for building packages from ports for deprecated 32-bit platforms.
+
+The FreeBSD stable/14 and earlier branches will retain existing 32-bit kernel and world support.
+Ports will retain existing support for building ports and packages for 32-bit systems on stable/14 and earlier branches as long as those branches are supported by the ports system.
+However, all 32-bit platforms are Tier-2 or Tier-3, and support for individual ports should be expected to degrade as upstreams deprecate 32-bit platforms.
+
+With the current support schedule, stable/14 will reach end of life (EOL) around 5 years after the release of FreeBSD 14.0-RELEASE.
+The EOL of stable/14 will mark the end of support for deprecated 32-bit platforms, including source releases, pre-built packages, and support for building applications from ports.
+With the release of 14.0-RELEASE in November 2023, support for deprecated 32-bit platforms will end in November 2028.
+
+The Project may choose to alter this approach when FreeBSD 15.0 is released by extending some level of support for one or more of the deprecated platforms in 15.0 or later.
+Any alterations will be driven by community feedback and committed efforts to support these platforms.
