[phb][Uses]: Add missing Uses=angr

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -115,6 +115,30 @@ Possible arguments: (none), `6`, `12`, `(run)`
 Depends on an Ada-capable compiler, and sets `CC` accordingly.
 Defaults to use `gcc6-aux` from ports.
 
+[[uses-angr]]
+== `angr`
+
+Possible arguments: `binaries`, `nose`
+
+Provide support for ports that need the https://github.com/angr/angr[angrinary analysis platform].
+
+If the `binaries` argument is present, the port requires the special `angr`
+binaries for testing.
+
+If the `nose` argument is present, the port uses `nosetests` for the test
+target. This argument implies `USES=python:test`.
+
+The framework provides the following variables to be set by the port:
+
+`ANGR_VERSION`::
+The version of the `angr` project programs.
+
+`ANGR_BINARIES_TAGNAME`::
+The tagname of the `angr` binaries.
+
+`ANGR_NOSETESTS`::
+The path to the `nosetests` program.
+
 [[uses-autoreconf]]
 == `autoreconf`
 
