[website]: Update SDBUG usergroup details and supporting vendor.
Approved by:		fernape@
Differential Revision:	https://reviews.freebsd.org/D49087

--- a/website/content/en/usergroups/_index.adoc
+++ b/website/content/en/usergroups/_index.adoc
@@ -260,10 +260,10 @@ link:http://www.seabug.org[Seattle BSD Users Group (SeaBUG)]::
 The Seattle BSD Users Group (SeaBUG) meets occasionally. View our web site for more details and for information on how to join our mailing list.
 Located in Seattle, WA.
 
-link:http://www.sdbug.org[San Diego BSD Users Group]::
-The San Diego BSD Users Group for users of FreeBSD, OpenBSD and NetBSD.
-The meeting is first Thursday of every month at Boll Weevil off Clairemont Mesa Blvd., near the intersection with Ruffin Road.
-More information can be found link:http://www.sdbug.org[here].
+link:https://sdbug.org/[San Diego BSD Users Group (SDBUG)]::
+The San Diego BSD Users Group meets on the first Thursday of every
+month, usually at AleSmith on Miramar Rd.
+Check the link:https://sdbug.org/[website] and mailing lists for specifics.
 Located in San Diego, CA.
 
 link:http://www.tfug.org[Tucson Free Unix Group (TFUG)]::
