[phb][Uses]: Add missing Uses=apache
Differential Revision: https://reviews.freebsd.org/D49107

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -181,6 +181,58 @@ Path to the directory for local Ansible plugins.
 `ANSIBLE_PLUGIN_TYPE`::
 Ansible plugin type (e.g., "connection", "inventory", or "vars").
 
+[[uses-apache]]
+== `apache`
+
+Possible arguments: (none), `2.4`, `build`, `run`, `server`
+
+Provide support for ports depending on the Apache web server.
+
+The version argument can be used to require a specific Apache httpd version.
+It is possible to set a specific version (`USES=apache:2.4`) a minimum version
+(`USES=apache:+2.4`) or a maximum version (`USES=-apache:2.4`).
+
+If the `build` argument is provided a build dependency is added to the port.
+
+If the `run` argument is provided a run dependency is added to the port.
+
+If the `server` argument is provided then it indicates the port is a server
+port.
+
+The framework provides the following variables to be set by the port:
+
+`AP_FAST_BUILD`::
+Automatic module build
+
+`AP_GENPLIST`::
+Automatic `PLIST` generation plus add the module disabled into [.filename]#httpd.conf# (only if no `pkg-plist` exist)
+
+`MODULENAME`::
+Name of the Apache module. Default: `${PORTNAME}`
+
+`SHORTMODNAME`::
+Short name of the Apache module. Default: `${MODULENAME:S/mod_//}`
+
+`SRC_FILE`::
+Source file of the APACHE module. Default: `${MODULENAME}.c`
+
+The following variables can be accessed by the port:
+
+`APACHE_VERSION`::
+The major-minor release version of the chosen Apache server, e.g. 2.4
+
+`APACHEETCDIR`::
+Location of the Apache configuration directory. Default: [.filename]#${LOCALBASE}/etc/apache24#
+
+`APACHEINCLUDEDIR`::
+Location of the Apache include files Default: [.filename]#${LOCALBASE}/include/apache24#
+
+`APACHEMODDIR`::
+Location of the Apache modules Default: [.filename]#${LOCALBASE}/libxexec/apache24#
+
+`APACHE_DEFAULT`::Default Apache version
+
+
 [[uses-autoreconf]]
 == `autoreconf`
 
