Status/2024Q4: Vale fixes
Differential Revision:	https://reviews.freebsd.org/D49023

--- a/website/content/en/status/report-2024-10-2024-12/audio.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/audio.adoc
@@ -11,7 +11,8 @@ Important work since link:https://www.freebsd.org/status/report-2024-07-2024-09/
   Several cleanup and refactor patches.
 * Committed man:mididump[1].
   Ships with 14.2-RELEASE and 14-STABLE.
-* Implementing link:https://reviews.freebsd.org/D47638[AFMT_FLOAT] support. This fixes ports, such as package:emulators/wine[], that require `AFMT_FLOAT` support from OSS.
+* Implementing link:https://reviews.freebsd.org/D47638[AFMT_FLOAT] support.
+  This fixes ports, such as package:emulators/wine[], that require `AFMT_FLOAT` support from OSS.
   Related bug reports: link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=184380[PR 184380], link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=281390[PR 281390], link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=264973[PR 264973], link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=157050[PR 157050].
 
 Future work includes:
