--- a/website/content/en/status/report-2024-10-2024-12/bugmeister.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/bugmeister.adoc
@@ -45,7 +45,8 @@ Bugmeister folks also did some passes through the database to clean up metadata:
 
  * evaluated "PR shows a commit" (possibly via Phabricator)" and "there was no trailing discussion".
    ** In a few cases of the above we simply assigned them and made sure that mfc-stable[13|14] was set, if it seemed appropriate.
-   ** This does leave many that have a commit and then have trailing discussion.  I think we will need more volunteers to go through those.
+   ** This does leave many that have a commit and then have trailing discussion.
+   I think we will need more volunteers to go through those.
 
  * removed many of the 'patch' keywords from PRs.
    In the optimal case these should now be imputed by metadata in each attachment.
