--- a/website/content/en/status/report-2024-10-2024-12/gvm.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/gvm.adoc
@@ -2,7 +2,7 @@
 
 Links: +
 link:https://www.greenbone.net/en/[Greenbone] URL: link:https://www.greenbone.net/en/[] +
-link:https://github.com/greenbone/[Greenbone Github] URL: link:https://github.com/greenbone/[] +
+link:https://github.com/greenbone/[Greenbone GitHub] URL: link:https://github.com/greenbone/[] +
 
 Contact: José Alonso Cárdenas Márquez <acm@FreeBSD.org>
 
