--- a/website/content/en/status/report-2024-10-2024-12/lxqt.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/lxqt.adoc
@@ -2,7 +2,7 @@
 
 Links: +
 link:https://lxqt-project.org/[LXQt Project] URL: link:https://lxqt-project.org/[] +
-link:https://github.com/lxqt/[LXQt Project Github] URL: link:https://github.com/lxqt[] +
+link:https://github.com/lxqt/[LXQt Project GitHub] URL: link:https://github.com/lxqt[] +
 
 Contact: LXQt Team <lxqt@FreeBSD.org>
 
