--- a/website/content/en/status/report-2024-10-2024-12/torbrowser.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/torbrowser.adoc
@@ -1,7 +1,7 @@
 === Tor-Browser
 
-Links:
-link:https://www.torproject.org/[Tor Project Homepage] URL: link:https://www.torproject.org/[]
+Links: +
+link:https://www.torproject.org/[Tor Project Homepage] URL: link:https://www.torproject.org/[] +
 link:https://gitlab.torproject.org/tpo/applications/tor-browser[GitLab Repository] URL: link:https://gitlab.torproject.org/tpo/applications/tor-browser[]
 
 Contact: Martin Filla <freebsd@sysctl.cz>
