--- a/website/content/en/status/report-2024-10-2024-12/bhyvemgr.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/bhyvemgr.adoc
@@ -5,7 +5,8 @@ link:https://github.com/alonsobsd/bhyvemgr[Bhyvemgr] URL: link:https://github.co
 
 Contact: José Alonso Cárdenas Márquez <acm@FreeBSD.org>
 
-Bhyvemgr is a bhyve management GUI written in Freepascal/Lazarus on FreeBSD. It needs a bunch of tools mostly installed on base system and some installed from ports/packages.
+Bhyvemgr is a bhyve management GUI written in Freepascal/Lazarus on FreeBSD.
+It needs a bunch of tools mostly installed on base system and some installed from ports/packages.
 The application is being developed for desktop users to easily and quickly setup and run virtual machines on FreeBSD hosts.
 
 During this quarter, there were many bugfixes and improvements to Bhyvemgr.
