Articles/Status reports process: Improvements
- Remove reference to a contributor of a very old version of this document: it does not add much to the text and the name can be retrieved through our VCS if need be.
- Various other improvements.

Reviewed by:	status (Pau Amma <pauamma@gundo.com>)
Differential Revision:	https://reviews.freebsd.org/D47497

--- a/documentation/content/en/articles/freebsd-status-report-process/_index.adoc
+++ b/documentation/content/en/articles/freebsd-status-report-process/_index.adoc
@@ -2,7 +2,7 @@
 title: FreeBSD Status Report Process
 authors:
   - author: The FreeBSD Documentation Project
-copyright: 2023 The FreeBSD Documentation Project
+copyright: 2023-2025 The FreeBSD Documentation Project
 description: Instructions for both writers and editors of status reports
 trademarks: ["freebsd", "git", "github", "general"]
 ---
@@ -28,7 +28,7 @@ Throughout this document and in other places related to FreeBSD status reports a
 
 == Instructions for writers
 
-This section provides some advice on writing status report entries from mailto:theraven@FreeBSD.org[David Chisnall], experienced in technical writing.
+This section provides some advice on writing status report entries.
 Instructions on how to submit your entries are also given.
 
 _Do not worry if you are not a native English speaker.
@@ -56,7 +56,7 @@ A new driver, abc(4), was added to the tree, bringing support for
 Yoyodyne's range of Frobnicator network interfaces.
 ....
 
-Now the reader knows that abc is a network interface driver.
+Now the reader knows that `abc` is a network interface driver.
 Even if they do not use any Yoyodyne products, you have communicated that FreeBSD's support for network devices is improving.
 
 === Show the Importance of Your Work
@@ -214,12 +214,14 @@ Calls for status reports are sent to the following recipients:
 
 * the link:https://lists.freebsd.org/subscription/freebsd-status-calls[freebsd-status-calls@FreeBSD.org mailing list];
 * to all submitters of last status reports (they may have updates or further improvements);
-* and, depending on the season:
+* and, depending on the season,
 	** Various conference organizers:
 		*** link:mailto:secretary@asiabsdcon.org[AsiaBSDCon] in March (First Quarter);
 		*** link:mailto:info@bsdcan.org[BSDCan] in May (Second Quarter);
-		*** EuroBSDcon September - October (Third-Fourth Quarter).
-		EuroBSDcon as an organization is not interested in writing reports for FreeBSD (at least it was not in October 2019: its reason is that the conference is not FreeBSD specific), so reports about this event should be asked of members of the FreeBSD community that attended it;
+	** Various conference attendees:
+		*** EuroBSDcon in September - October (Third-Fourth Quarter);
+		    EuroBSDcon as an organization is not interested in writing reports for FreeBSD - at least it was not in October 2019: its reason is that the conference is not FreeBSD specific.
+		    Hence, reports about this event should be asked of members of the FreeBSD community that attended it.
 	** Google Summer of Code link:mailto:soc-students@FreeBSD.org[students] and their link:mailto:soc-mentors@FreeBSD.org[mentors].
 
 The easiest way to send calls for status reports is to use the link:https://cgit.freebsd.org/doc/tree/tools/sendcalls/sendcalls[[.filename]#sendcalls# perl script] in the [.filename]#tools/sendcalls# directory of the doc git repository.
