[hb][jails]: Tip for before creating thin jails using OpenZFS.
Recommend creating the jail directory tree first.

Differential Revision: https://reviews.freebsd.org/D49098

--- a/documentation/content/en/books/handbook/jails/_index.adoc
+++ b/documentation/content/en/books/handbook/jails/_index.adoc
@@ -421,8 +421,9 @@ such as being able to create them faster from snapshots or being able to update 
 
 Due to the good integration between FreeBSD and OpenZFS it is very easy to create new Thin Jails using OpenZFS Snapshots.
 
-To create a Thin Jail using OpenZFS Snapshots the first step is to create a template.
+To create a Thin Jail using OpenZFS Snapshots the first step is to create the jail directory tree by following the instructions in crossref:jails[host-configuration-directories, "Setting up the Jail Directory Tree"].
 
+Next, create a template.
 Templates will only be used to create new jails.
 For this reason they are created in "read-only" mode so that jails are created with an immutable base.
 
