handbook/jails: Correct vnet jail example
In an AMA on the Community Discord, it was revealed that this example
was copied from Antranig's blog incorrectly. Correct the syntax here.

Reported by:		Antranig Vartanian <antranigv@freebsd.am>
Reported by:		Niclas <buero28@icloud.com>
Reviewed by:		bcr, mhorne
Approved by:		mhorne (mentor)
Differential Revision:	https://reviews.freebsd.org/D48972

--- a/documentation/content/en/books/handbook/jails/_index.adoc
+++ b/documentation/content/en/books/handbook/jails/_index.adoc
@@ -730,8 +730,6 @@ The following is an example configuration for a VNET jail:
 ....
 vnet {
   # STARTUP/LOGGING
-  exec.start = "/bin/sh /etc/rc";
-  exec.stop  = "/bin/sh /etc/rc.shutdown";
   exec.consolelog = "/var/log/jail_console_${name}.log";
 
   # PERMISSIONS
@@ -761,6 +759,8 @@ vnet {
   exec.prestart += "/sbin/ifconfig ${bridge} addm ${epair}a up";
   exec.start    += "/sbin/ifconfig ${epair}b ${ip} up";
   exec.start    += "/sbin/route add default ${gateway}";
+  exec.start	+= "/bin/sh /etc/rc";
+  exec.stop	= "/bin/sh /etc/rc.shutdown";
   exec.poststop = "/sbin/ifconfig ${bridge} deletem ${epair}a";
   exec.poststop += "/sbin/ifconfig ${epair}a destroy";
 }
